Написаны документы в Markdown

--- a/docs/О_проекте.md
+++ b/docs/О_проекте.md
@@ -8,6 +8,6 @@
 
 Каждой частью руководит тимлид, обеспечивающий координацию задач внутри своей команды.
 
-![Изображение структуры проекта](site/IMG/frontend.png)
-![Изображение структуры проекта](site/IMG/design.png)
-![Изображение структуры проекта](site/IMG/backend.png)
+![Изображение структуры проекта](../site/IMG/frontend.png)
+![Изображение структуры проекта](../site/IMG/design.png)
+![Изображение структуры проекта](../site/IMG/backend.png)
